Allow illegal accesses in kotlin-dsl plugin